--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -6,9 +6,10 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
+    font-size: 16px;
 }
 
-.login-container, .pokemon-search-container {
+.form-container, .pokemon-search-container {
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
@@ -42,6 +43,10 @@ h2 {
     font-size: 16px;
 }
 
+.input-group input:disabled, .search-input-group input:disabled {
+    background-color: #f0f0f0;
+}
+
 .search-input-group input {
     width: calc(70% - 10px); /* Ajuste para el botón */
     display: inline-block;
@@ -49,26 +54,87 @@ h2 {
     margin-right: 10px;
 }
 
-button {
+#passwordRules {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    list-style: none;
+    padding: 0;
+    font-size: 10px;
+    font-family: sans-serif;
+    margin-bottom: 15px;
+}
+
+#passwordRules ul {
+    margin: 0;
+}
+
+.rule {
+    color: #cc0000;
+    margin-bottom: 5px;
+    transition: color 0.3s ease;
+}
+
+.rule.valid {
+    color: #2e7d32;
+}
+
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-container input {
+  flex: 1;
+  padding-right: 40px;
+}
+
+.togglePassword {
+  position: absolute;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  margin: 0;
+  font-size: 20px;
+  line-height: 25px; /* igual a la altura para centrar verticalmente */
+  text-align: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+
+#submitBtn:disabled {
+    background-color: #007bffb7;
+    cursor: not-allowed;
+}
+
+#submitBtn {
+    margin-top: 15px;
+    padding: 10px;
     background-color: #007bff;
     color: white;
-    padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+#submitBtn:enabled:hover {
     background-color: #0056b3;
 }
 
 .error-message {
-    color: #e74c3c;
-    margin-top: 10px;
-    font-size: 1em;
-    text-align: center;
+    display: block;
+    margin-bottom: 15px;
+    text-align: left;
+    color: #cc0000;
+    text-align: left;
+    font-size: 10px;
+    font: sans-serif;
 }
 
 .pokemon-result {
@@ -139,7 +205,7 @@ button:hover {
 .input-group .g-recaptcha {
     margin: 18px 0 10px 0;
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 
 /* Opcional: mejora el botón de enviar cuando está debajo del captcha */
